--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: my-app
         image: samuelsamits/java_awesome-cicd:22
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
